Insert route and details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,8 @@
     <string name="desc">Description</string>
     <string name="save">Save</string>
     <string name="name">Name</string>
-    <string name="insert_route">http://bait2073.comli.com.insert_route.php</string>
-    <string name="insert_route_detail">http://bait2073.comli.com.insert_route_detail.php</string>
+    <string name="insert_route">http://bait2073.comli.com/insert_route.php</string>
+    <string name="insert_route_detail">http://bait2073.comli.com/insert_route_detail.php</string>
     <string name="title_activity_save_route">SaveRouteActivity</string>
     <string name="id">ID</string>
 </resources>
