--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="current">Current Location:</string>
     <string name="near">Near to:</string>
     <string name="title_activity_maps">Map</string>
-    <string name="show_map">Show Map</string>
+    <string name="show_bus">Show Bus</string>
+    <string name="gps_on">GPS</string>
 </resources>
